# voicevox-core-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  voicevox_core_bindigs.rs
