[package]
name = "voicevox_core"
version = "0.1.0"
edition = "2018"
author = "Yuma Soga <yuma.soga@ymsg.space>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
libloading = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"

[build-dependencies]
bindgen = "0.59.1"
